ee/Kubernetes-Deployment-yamls-v3-dev/k8-browser-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cometa-chrome
  namespace: cometa
  labels:
    app: cometa-chrome  # Added label to match the service selector
spec:
  tolerations:
  - key: "architecture"
    operator: "Equal"
    value: "amd"
    effect: "NoSchedule"
  # securityContext:
  #   fsGroup: 472
  #   runAsGroup: 472
  #   runAsNonRoot: true
  #   runAsUser: 472
  containers:
  - name: cometa-chrome
    image: cometa/chrome:131.0
    securityContext:
      allowPrivilegeEscalation: true
      # capabilities:
      #   drop:
      #   - ALL
      # runAsNonRoot: true
      # runAsGroup: 472
      # runAsUser: 472
      # seccompProfile:
      #   type: RuntimeDefault
    resources:
      limits:
        cpu: "2"
        memory: "2Gi"
      requests:
        cpu: "1"
        memory: "1Gi"
    ports:
    - containerPort: 4444
      protocol: TCP
    - containerPort: 7900
      protocol: TCP
    volumeMounts:
    - name: cometa-volume
      mountPath: /video
      subPath: data/cometa/videos
    # - name: cometa-volume
    #   mountPath: /opt/selenium/config.toml
    #   subPath: data/cometa/videos
  volumes:
  - name: cometa-volume
    persistentVolumeClaim:
      claimName: cometa-data-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: cometa-chrome-service
  namespace: cometa
spec:
  selector:
    app: cometa-chrome  # This matches the pod's labels
  ports:
  - name: selenium
    protocol: TCP
    port: 4444
    targetPort: 4444
  - name: vnc
    protocol: TCP
    port: 7900
    targetPort: 7900
  type: NodePort
