ee/Kubernetes-Deployment-yamls-v3-dev/k8-behave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cometa-behave-deployment
  namespace: cometa  # Specify the namespace
  labels:
    app: cometa-behave-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cometa-behave-pod
  template:
    metadata:
      labels:
        app: cometa-behave-pod
    spec:
      serviceAccountName: pod-manager
      tolerations:
      - key: "architecture"
        operator: "Equal"
        value: "amd"
        effect: "NoSchedule"
        
      # securityContext:
      #   fsGroup: 472
      #   runAsGroup: 472
      #   runAsNonRoot: true
      #   runAsUser: 472
      containers:
      - name: cometa-behave-container
        # image: cometa/behave:1.0
        image: cometa/behave:0.1
        # imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: true
          # capabilities:
          #   drop:
          #   - ALL
          # runAsNonRoot: true
          # runAsGroup: 472
          # runAsUser: 472
          # seccompProfile:
          #   type: RuntimeDefault
        ports:
        - containerPort: 8001
        # workingDir: /opt/code/behave_django
        # command: ["/bin/sh", "-c", "/opt/code/entry.sh"]
        # command: ["./entry.sh"]
        # command: ["/bin/bash", "-c", "sleep infinity"]
        volumeMounts:
        - name: cometa-volume
          mountPath: /data/screenshots
          subPath: ./data/cometa/screenshots
        - name: cometa-volume
          mountPath: /data/department_data
          subPath: ./data/department_data
        - name: cometa-volume
          mountPath: /data/test/html
          subPath: ./data/html
        - name: cometa-volume
          mountPath: /data/test/downloads
          subPath: ./data/cometa/downloads
        - name: cometa-volume
          mountPath: /opt/code
          subPath: ./data/backend/behave
        - name: cometa-volume
          mountPath: /data/logs
          subPath: ./share/code/behave/logs
          
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
      volumes:
      - name: cometa-volume
        persistentVolumeClaim:
          claimName: cometa-data-volume-claim


---

apiVersion: v1
kind: Service
metadata:
  name: cometa-behave-service
  namespace: cometa  # Specify the namespace
spec:
  selector:
    app: cometa-behave-pod
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: behave-allow-from-django
  namespace: cometa  # Ensure this is applied within the 'cometa' namespace
spec:
  podSelector:
    matchLabels:
      app: cometa-behave-pod  # This selects the pods that the policy applies to
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cometa-django-pod  # Only allow pods with this label
      namespaceSelector:
        matchLabels:
          name: cometa  # Restrict ingress to pods in the 'cometa' namespace

    ports:
    - protocol: TCP
      port: 8001  # Assuming traffic comes on port 8001
